# perlmod_bldr

./: .gitignore  AUTHORS  ChangeLog  INSTALL  Makefile.am  Math-GMP-2.05.patch.in  NEWS  README  THANKS  configure.ac  configure_pkg.sh  get_cpan_modules.pl  get_cpan_modules.pl.in  querymods_cpanp.pl  querymods_cpanp.pl.in  querymods_fs.pl  querymods_fs.pl.in
